test/corpus/L1/positive/keyword-multi.st
"---
id: keyword-multi
kind: positive
phase: parse
layer: L1
spec: anexoA:message.keyword
origin: spec-ANSI
section: message.keyword
note: multi-part keyword message forms a single send with two arguments
---"
x at: 1 put: 2
