test/corpus/L1/negative/unexpected-token-return.st
"---
id: unexpected-token-return
kind: negative
phase: parse
layer: L1
spec: anexoA:error.unexpected-token
origin: spec-ANSI
section: error.unexpected-token
note: caret return operator used at statement level outside a method body
codes: E_UNEXPECTED_TOKEN
---"
^1. 2
